--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </p>
         </article>
         <footer>
-            <h2 id="rodape">Site criado por Bernardo Kravutschke, Meu Primeiro site.</h2>
+            <h2 id="rodape">Site criado por <a href="github.com/Berkra07">Bernardo Kravutschke</a>.</h2>
         </footer>
     </main>
     <h1 style="color: blue;"> <title></title> </h1>
