--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
                     Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.
                 </p>
                 <ul>
-                    <li>1.5 - Cupcake</li>
-                    <li>1.6 - Donut</li>
-                    <li>3.0 - Eclair</li>
-                    <li>2.2 - Froyo</li>
-                    <li>2.3 - Gingerbread</li>
-                    <li>3.0 - Honeycomb</li>
-                    <li>4.0 - Ice Cream Sandwich</li>
-                    <li>3.1 - Jelly Bean</li>
-                    <li>3.4 - KitKat</li>
-                    <li>5.0 - Lolipop</li>
-                    <li>6.0 - Marshmallow</li>
-                    <li>7.0 - Nougat</li>
-                    <li>8.0 - Oreo</li>
-                    <li>9.0 - Pie</li>              
+                    <li><a href="https://pt.wikipedia.org/wiki/Android_Cupcake">1.5 - Cupcake</a></li>
+                    <li><a href="https://pt.wikipedia.org/wiki/Android_Donut">1.6 - Donut</a></li>
+                    <li><a href="https://pt.wikipedia.org/wiki/Android_Eclair">3.0 - Eclair</a></li>
+                    <li><a href="https://pt.wikipedia.org/wiki/Android_Froyo">2.2 - Froyo</a></li>
+                    <li><a href="https://pt.wikipedia.org/wiki/Android_Gingerbread">2.3 - Gingerbread</a></li>
+                    <li><a href="https://en-m-wikipedia-org.translate.goog/wiki/Android_Honeycomb?_x_tr_sl=en&_x_tr_tl=pt&_x_tr_hl=pt&_x_tr_pto=tc">3.0 - Honeycomb</a></li>
+                    <li><a href="">4.0 - Ice Cream Sandwich</a></li>
+                    <li><a href="">3.1 - Jelly Bean</a></li>
+                    <li><a href="">3.4 - KitKat</a></li>
+                    <li><a href="">5.0 - Lolipop</a></li>
+                    <li><a href="">6.0 - Marshmallow</a></li>
+                    <li><a href="">7.0 - Nougat</a></li>
+                    <li><a href="">8.0 - Oreo</a></li>
+                    <li><a href="">9.0 - Pie</a></li>              
                 </ul>
                 <p>
                     Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
