--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                     <li><a href="https://pt.wikipedia.org/wiki/Android_Froyo">2.2 - Froyo</a></li>
                     <li><a href="https://pt.wikipedia.org/wiki/Android_Gingerbread">2.3 - Gingerbread</a></li>
                     <li><a href="https://en-m-wikipedia-org.translate.goog/wiki/Android_Honeycomb?_x_tr_sl=en&_x_tr_tl=pt&_x_tr_hl=pt&_x_tr_pto=tc">3.0 - Honeycomb</a></li>
-                    <li><a href="">4.0 - Ice Cream Sandwich</a></li>
-                    <li><a href="">3.1 - Jelly Bean</a></li>
-                    <li><a href="">3.4 - KitKat</a></li>
-                    <li><a href="">5.0 - Lolipop</a></li>
-                    <li><a href="">6.0 - Marshmallow</a></li>
-                    <li><a href="">7.0 - Nougat</a></li>
-                    <li><a href="">8.0 - Oreo</a></li>
-                    <li><a href="">9.0 - Pie</a></li>              
+                    <li><a href="https://simple.wikipedia.org/wiki/Android_Ice_Cream_Sandwich">4.0 - Ice Cream Sandwich</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_Jelly_Bean">3.1 - Jelly Bean</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_KitKat">3.4 - KitKat</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_Lollipop">5.0 - Lolipop</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_Marshmallow">6.0 - Marshmallow</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_Nougat">7.0 - Nougat</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_Oreo">8.0 - Oreo</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_Pie">9.0 - Pie</a></li>              
                 </ul>
                 <p>
                     Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
