--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
                     Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.
                 </p>
                 <ul>
-                    <li><a href="https://pt.wikipedia.org/wiki/Android_Cupcake">1.5 - Cupcake</a></li>
-                    <li><a href="https://pt.wikipedia.org/wiki/Android_Donut">1.6 - Donut</a></li>
-                    <li><a href="https://pt.wikipedia.org/wiki/Android_Eclair">3.0 - Eclair</a></li>
-                    <li><a href="https://pt.wikipedia.org/wiki/Android_Froyo">2.2 - Froyo</a></li>
-                    <li><a href="https://pt.wikipedia.org/wiki/Android_Gingerbread">2.3 - Gingerbread</a></li>
-                    <li><a href="https://en-m-wikipedia-org.translate.goog/wiki/Android_Honeycomb?_x_tr_sl=en&_x_tr_tl=pt&_x_tr_hl=pt&_x_tr_pto=tc">3.0 - Honeycomb</a></li>
-                    <li><a href="https://simple.wikipedia.org/wiki/Android_Ice_Cream_Sandwich">4.0 - Ice Cream Sandwich</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Android_Jelly_Bean">3.1 - Jelly Bean</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Android_KitKat">3.4 - KitKat</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Android_Lollipop">5.0 - Lolipop</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Android_Marshmallow">6.0 - Marshmallow</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Android_Nougat">7.0 - Nougat</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Android_Oreo">8.0 - Oreo</a></li>
-                    <li><a href="https://en.wikipedia.org/wiki/Android_Pie">9.0 - Pie</a></li>              
+                    <li><a href="https://pt.wikipedia.org/wiki/Android_Cupcake" target="_blank">1.5 - Cupcake</a></li>
+                    <li><a href="https://pt.wikipedia.org/wiki/Android_Donut" target="_blank">1.6 - Donut</a></li>
+                    <li><a href="https://pt.wikipedia.org/wiki/Android_Eclair" target="_blank">3.0 - Eclair</a></li>
+                    <li><a href="https://pt.wikipedia.org/wiki/Android_Froyo" target="_blank">2.2 - Froyo</a></li>
+                    <li><a href="https://pt.wikipedia.org/wiki/Android_Gingerbread" target="_blank">2.3 - Gingerbread</a></li>
+                    <li><a href="https://en-m-wikipedia-org.translate.goog/wiki/Android_Honeycomb?_x_tr_sl=en&_x_tr_tl=pt&_x_tr_hl=pt&_x_tr_pto=tc" target="_blank">3.0 - Honeycomb</a></li>
+                    <li><a href="https://simple.wikipedia.org/wiki/Android_Ice_Cream_Sandwich" target="_blank">4.0 - Ice Cream Sandwich</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_Jelly_Bean" target="_blank">3.1 - Jelly Bean</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_KitKat" target="_blank">3.4 - KitKat</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_Lollipop" target="_blank">5.0 - Lolipop</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_Marshmallow" target="_blank">6.0 - Marshmallow</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_Nougat" target="_blank">7.0 - Nougat</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_Oreo" target="_blank">8.0 - Oreo</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Android_Pie" target="_blank">9.0 - Pie</a></li>              
                 </ul>
                 <p>
                     Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
