--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <nav>
         <a class="navlink" href="">Home</a>
-        <a class="navlink" href="https://www.android.com/intl/pt_br/new-features-on-android/">Notícias</a>
-        <a class="navlink" href="https://www.tecmundo.com.br/software/198354-10-curiosidades-android-brasil.htm">Curiosidades</a>
+        <a class="navlink" href="https://www.android.com/intl/pt_br/new-features-on-android/ " target="_blank">Notícias</a>
+        <a class="navlink" href="https://www.tecmundo.com.br/software/198354-10-curiosidades-android-brasil.htm" target="_blank">Curiosidades</a>
         <a class="navlink" href="">Fale Conosco</a>
     </nav>
     <main>
